--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "husky": "^9.1.5"
   },
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "commitlint": "commitlint --edit"
   }
 }
