--- a/tupan/package.json
+++ b/tupan/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "next": "14.2.9",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tupan": "file:"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
