--- a/tupan/package.json
+++ b/tupan/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
+    "flowbite": "^2.5.1",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18"
