--- a/tupan/package.json
+++ b/tupan/package.json
@@ -14,7 +14,8 @@
     "flowbite": "^2.5.1",
     "next": "14.2.9",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
