--- a/tupan/package.json
+++ b/tupan/package.json
@@ -22,7 +22,7 @@
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
     "tupan": "file:"
   },
   "devDependencies": {
