oper: atualizar arquivo de workflow agora com checagem da branch main

--- a/.github/workflows/pull-request-auto-title.yml
+++ b/.github/workflows/pull-request-auto-title.yml
@@ -12,10 +12,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Fetch all history for all branches
 
       - name: Fetch all remote branches
         run: git fetch --all
+
+      - name: Verify that 'main' branch exists
+        run: |
+          # Ensure the 'main' branch exists and is fetched
+          if git show-ref --quiet refs/remotes/origin/main; then
+            echo "Main branch is available."
+          else
+            echo "Main branch is not available. Exiting..."
+            exit 1
+          fi
 
       - name: Get current branch name
         id: get_branch
@@ -24,7 +34,7 @@ jobs:
       - name: Get all commit messages
         id: get_commits
         run: |
-          # Certifique-se de que a branch 'main' esteja disponível
+          # Get all commit messages from 'main' to the current branch
           COMMITS=$(git log --pretty=format:"%s" origin/main..HEAD)
           echo "::set-output name=commits::$COMMITS"
 
