--- a/.github/workflows/pull-request-auto-title.yml
+++ b/.github/workflows/pull-request-auto-title.yml
@@ -12,33 +12,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Garante o histórico completo
-
-      - name: Fetch all remote branches
-        run: git fetch --all  # Isso deve baixar todas as branches, mas pode ser ajustado
-
-      - name: Fetch the main branch
-        run: git fetch origin main  # Garante que a branch main esteja disponível
-
-      - name: Verify that 'main' branch exists
-        run: |
-          if git show-ref --verify --quiet refs/remotes/origin/main; then
-            echo "Branch 'main' disponível."
-          else
-            echo "Erro: A branch 'main' não foi encontrada."
-            exit 1
-          fi
+          fetch-depth: 0
 
       - name: Get current branch name
         id: get_branch
-        run: echo "branch_name=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV  # Uso do novo método
+        run: echo "branch_name=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
 
       - name: Get all commit messages
         id: get_commits
         run: |
-          # Garante que estamos comparando corretamente as revisões entre 'main' e a branch atual
-          COMMITS=$(git log --pretty=format:"%s" origin/main..HEAD)  # Verifica a comparação
-          echo "commits=$COMMITS" >> $GITHUB_ENV  # Uso do novo método
+          CURRENT_BRANCH="${{ env.branch_name }}"
+          COMMITS=$(git log --pretty=format:"%s" "${CURRENT_BRANCH}^..${CURRENT_BRANCH}")
+          echo "commits=$COMMITS" >> $GITHUB_ENV
 
       - name: Analyze commits and generate PR title/description
         id: generate_pr_title
@@ -46,12 +31,12 @@ jobs:
           COMMITS="${{ env.commits }}"
           BRANCH_NAME="${{ env.branch_name }}"
 
-          # Extrai detalhes da branch
+          # Extract branch details
           TASK_ID=$(echo "$BRANCH_NAME" | cut -d'-' -f1)
           TAG_TIPO=$(echo "$BRANCH_NAME" | cut -d'-' -f2 | cut -d'/' -f1)
           DESCRICAO_BRANCH=$(echo "$BRANCH_NAME" | cut -d'/' -f2)
 
-          # Analisa os commits e gera o título com base nos commits
+          # Analyze commits for tags
           if echo "$COMMITS" | grep -q '^func'; then
               TITLE="Funcionalidade: $DESCRICAO_BRANCH - Task #$TASK_ID"
           elif echo "$COMMITS" | grep -q '^corr'; then
@@ -66,7 +51,7 @@ jobs:
               TITLE="Atualização: $DESCRICAO_BRANCH - Task #$TASK_ID"
           fi
 
-          # Cria o corpo da PR com a lista de commits
+          # Create PR body with commits list
           DESCRIPTION="## Commits\n$COMMITS"
 
           echo "pr_title=$TITLE" >> $GITHUB_ENV
