corr: alterando local da pasta .github para raiz

--- a/tupan/Dockerfile
+++ b/tupan/Dockerfile
@@ -27,4 +27,4 @@ EXPOSE 3000
 ENV PORT 3000
 CMD npm run dev
 
-#alterar para prod quando não estiver dando mais erros no build
+#alterar para prod quando não estiver dando mais erros
