--- a/.github/workflows/ec2deploy.yaml
+++ b/.github/workflows/ec2deploy.yaml
@@ -47,11 +47,11 @@ jobs:
         chmod 600 key.pem
     - name: Pull Docker image
       run: |
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@98.80.44.121 'sudo docker pull iagocpv/tupan-front:latest'
+        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@98.80.44.121 -vvv 'sudo docker pull iagocpv/tupan-front:latest'
     - name: Stop running container
       run: |
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@98.80.44.121 'sudo docker stop tupan-front || true'
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@98.80.44.121 'sudo docker rm tupan-front || true'
+        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@98.80.44.121 -vvv 'sudo docker stop tupan-front || true'
+        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@98.80.44.121 -vvv 'sudo docker rm tupan-front || true'
     - name: Run new container
       run: |
         ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@98.80.44.121 'sudo docker run -d --name tupan-front -p 80:3000 iagocpv/tupan-front:latest'
