--- a/.github/workflows/ec2deploy.yaml
+++ b/.github/workflows/ec2deploy.yaml
@@ -43,15 +43,15 @@ jobs:
         password: ${{ env.DOCKERHUB_TOKEN }}
     - name: Set permissions for private key
       run: |
-        echo "${{ env.KEYAWS }}" > key.pem
-        chmod 600 key.pem
+        echo "${{ env.KEYAWS }}" > ryan-key-teste-prod1.pem
+        chmod 600 ryan-key-teste-prod1.pem
     - name: Pull Docker image
       run: |
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@98.80.44.121 -vvv 'sudo docker pull iagocpv/tupan-front:latest'
+        ssh -o StrictHostKeyChecking=no -i ryan-key-teste-prod1.pem ubuntu@98.80.44.121 -vvv 'sudo docker pull iagocpv/tupan-front:latest'
     - name: Stop running container
       run: |
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@98.80.44.121 -vvv 'sudo docker stop tupan-front || true'
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@98.80.44.121 -vvv 'sudo docker rm tupan-front || true'
+        ssh -o StrictHostKeyChecking=no -i ryan-key-teste-prod1.pem ubuntu@98.80.44.121 -vvv 'sudo docker stop tupan-front || true'
+        ssh -o StrictHostKeyChecking=no -i ryan-key-teste-prod1.pem ubuntu@98.80.44.121 -vvv 'sudo docker rm tupan-front || true'
     - name: Run new container
       run: |
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@98.80.44.121 'sudo docker run -d --name tupan-front -p 80:3000 iagocpv/tupan-front:latest'
+        ssh -o StrictHostKeyChecking=no -i ryan-key-teste-prod1.pem ubuntu@98.80.44.121 -vvv 'sudo docker run -d --name tupan-front -p 80:3000 iagocpv/tupan-front:latest'
