--- a/tupan/package.json
+++ b/tupan/package.json
@@ -20,9 +20,12 @@
     "@material-tailwind/react": "^2.1.10",
     "axios": "^1.7.7",
     "flowbite": "^2.5.1",
-    "next": "14.2.9",
+    "highcharts": "^11.4.8",
+    "leaflet": "^1.9.4",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
     "react-toastify": "^10.0.5",
     "tupan": "file:"
   },
