--- a/.github/workflows/ec2deploy.yaml
+++ b/.github/workflows/ec2deploy.yaml
@@ -43,7 +43,7 @@ jobs:
         password: ${{ env.DOCKERHUB_TOKEN }}
     - name: Set permissions for private key
       run: |
-        echo "${{ env.KEYAWS }}" > key.pem
+        echo "${{ env.AWS_PRIVATE_KEY }}" > key.pem
         chmod 600 key.pem
     - name: Pull Docker image
       run: |
