--- a/.github/workflows/ec2deploy.yaml
+++ b/.github/workflows/ec2deploy.yaml
@@ -24,7 +24,7 @@ jobs:
       
       - name: Transfer code to AWS instance
         run: |
-          scp ${{ env.SSH_OPTIONS }} -r ./tupan/ ubuntu@98.80.44.121:/home/ubuntu/tupan/
+          scp -o StrictHostKeyChecking=no -i key.pem -r ./tupan/ ubuntu@98.80.44.121:/home/ubuntu/tupan/
       
       - name: SSH into AWS and build Docker image
         run: |
