--- a/.github/workflows/ec2deploy.yaml
+++ b/.github/workflows/ec2deploy.yaml
@@ -28,11 +28,11 @@ jobs:
       
       - name: Transfer code to AWS instance
         run: |
-          scp -o StrictHostKeyChecking=no -i key.pem -r ./tupan/ ubuntu@98.80.44.121:/home/ubuntu/tupan/
+          scp -o StrictHostKeyChecking=no -i key.pem -r ./tupan/ ubuntu@98.80.44.121:/home/ubuntu/tupan
       
       - name: SSH into AWS and build Docker image
         run: |
-          ssh ${{ env.SSH_OPTIONS }} 'cd /home/ubuntu/tupan && sudo docker build -t iagocpv/tupan-front:latest .'
+          ssh ${{ env.SSH_OPTIONS }} 'cd /home/ubuntu/tupan && sudo docker build -t tupan-front .'
       
       - name: Stop running container
         run: |
@@ -41,7 +41,7 @@ jobs:
       
       - name: Run new container
         run: |
-          ssh ${{ env.SSH_OPTIONS }} 'sudo docker run -d --name tupan-front -p 80:3000 iagocpv/tupan-front:latest'
+          ssh ${{ env.SSH_OPTIONS }} 'sudo docker run -d --name tupan-front -p 80:3000 tupan-front'
       
       - name: Cleanup SSH key
         run: |
