--- a/tupan/package.json
+++ b/tupan/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.7",
     "flowbite": "^2.5.1",
     "highcharts": "^11.4.8",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "next": "^14.2.15",
     "react": "^18",
@@ -34,6 +35,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
