--- a/.github/workflows/ec2deploy.yaml
+++ b/.github/workflows/ec2deploy.yaml
@@ -26,7 +26,7 @@ jobs:
       
       - name: Transfer code to AWS instance
         run: |
-          scp -o StrictHostKeyChecking=no -i key.pem -r ./tupan/ ubuntu@${{ EC2_IP }}:/home/ubuntu/tupan
+          scp -o StrictHostKeyChecking=no -i key.pem -r ./tupan/ ubuntu@${{ env.EC2_IP }}:/home/ubuntu/tupan
       
       - name: SSH into AWS and build Docker image
         run: |
