--- a/tupan/package.json
+++ b/tupan/package.json
@@ -18,13 +18,15 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.7",
     "flowbite": "^2.5.1",
     "highcharts": "^11.4.8",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "next": "^14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-toastify": "^10.0.5",
     "tupan": "file:"
