--- a/tupan/package.json
+++ b/tupan/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "flowbite": "^2.5.1",
     "highcharts": "^11.4.8",
     "js-cookie": "^3.0.5",
